--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,10 +16,16 @@
     </ul>
     <ul class='lists-right'>
       <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
-      <%# <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
-      <%# <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" </li> %>
-      <li><%= link_to 'ログイン', "#", class: "login" %></li>
-      <li><%= link_to '新規登録', "#", class: "sign-up" %></li>
+      <% if user_signed_in? %>
+    <div class="nav__right">
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :nav__logout %>
+    </div>
+  <% else %>
+    <div class="nav__right">
+      <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
+      <%= link_to "新規登録", new_user_registration_path, class: :nav__btn %>
+    </div>
+  <% end %>
       <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
     </ul>
   </div>
