ログアウト横のユーザーネーム実装

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,9 +16,11 @@
     </ul>
     <ul class='lists-right'>
       <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
-      <% if user_signed_in? %>
+    <% if user_signed_in? %>
+    <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
     <div class="nav__right">
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :nav__logout %>
+    <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :nav__logout %>
+  
     </div>
   <% else %>
     <div class="nav__right">
@@ -30,3 +32,4 @@
     </ul>
   </div>
 </header>
+      
