--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -58,8 +58,8 @@
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
-       <%= f.text_area :family_name, class:"input-name", id:"family-name", placeholder:"例) 山田" %> %>
-       <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %> %>
+       <%= f.text_area :family_name, class:"input-name", id:"family-name", placeholder:"例) 山田" %> 
+       <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %> 
     </div>
   </div>
   <div class="form-group">
@@ -68,8 +68,8 @@
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
-       <%= f.text_area :family_name_kana, class:"input-name", id:"family-name-kana", placeholder:"例) ヤマダ" %> %>
-       <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %> %>
+       <%= f.text_area :family_name_kana, class:"input-name", id:"family-name-kana", placeholder:"例) ヤマダ" %> 
+       <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %> 
     </div>
   </div>
   <div class="form-group">
