ブランク部分のコード追記

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,8 +11,8 @@
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
-      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
+      <li><%= link_to 'カテゴリー', "root_path", class: "category-list" %></li>
+      <li><%= link_to 'ブランド', "root_path", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
 
