--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,6 +127,7 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% if @items.present? %>
       <% @items.each do |item| %>
           <li class='list'>
         <%= link_to item_path(item.id) do %>
@@ -137,7 +138,7 @@
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <%# <% end %> 
+          
           
           <%# //商品が売れていればsold outを表示しましょう %>
 
@@ -161,8 +162,9 @@
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <% if item = nil %> 
+      <% else %>
       <%# 商品がある場合は表示されないようにしましょう %>
+      
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
