--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,16 +134,15 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
+
+
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <% if item.orders.present? %> 
+          <%# <% if item.orders.present? %>     
           <div class='sold-out'>
             <span>Sold Out!!</span>
-          </div>
-          
-          
+          </div>    
+          <%# <% end %> 
           <%# //商品が売れていればsold outを表示しましょう %>
-
-        </div>
         <div class='item-info'>
           <h3 class='item-name'>
             <%= item.name %>
@@ -161,9 +160,7 @@
         </li>
         <% end %>
       
-
       <% else %>
-      
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
