--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -138,9 +138,9 @@
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <%# <% if item.orders.present? %>     
-          <div class='sold-out'>
+          <%# <div class='sold-out'>
             <span>Sold Out!!</span>
-          </div>    
+          </div>     %>
           <%# <% end %> 
           <%# //商品が売れていればsold outを表示しましょう %>
         <div class='item-info'>
