--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,9 +10,9 @@
       <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <%# <% if @item.orders.present? %> 
-      <div class="sold-out">
+      <%# <div class="sold-out">
         <span>Sold Out!!</span>
-      </div>
+      </div> %>
       <%# <% end %> 
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
@@ -35,7 +35,7 @@
 
       <% else%>
       <%# 商品が売れていない場合はこちらを表示しましょう %>
-      <%# <%= link_to "購入画面に進む", item_orders_path(@item[:id]) ,class:"item-red-btn"%> 
+      <%= link_to '購入画面に進む', item_path(@item.id) ,class:"item-red-btn" %> 
       <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
     <%# <% end %> 
