--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<%# /支払額の表示 %>
+<%= form_with model: @orders, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
+  <%# カード情報の入力 %>
+  <div class='credit-card-form'>
+    <h1 class='info-input-headline'>
+      クレジットカード情報入力
+    </h1>
+<% #省略 %>
