--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -33,7 +33,7 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @orders, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
+    <%= form_with model: @orders_customer, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
