--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -20,8 +20,6 @@
     </div>
     <%# /購入内容の表示 %>
 
-    <%= render 'shared/error_messages', model: @orders %>
-
     <%# 支払額の表示 %>
     <div class='item-payment'>
       <h1 class='item-payment-title'>
@@ -33,7 +31,8 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @orders_customer, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
+    <%= form_with model: @order_customer, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
+    <%= render 'error_messages', model: @order_customer %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
