--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -32,7 +32,8 @@
     <%# /支払額の表示 %>
 
     <%= form_with model: @order_customer, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
-    <%= render 'error_messages', model: model: f.object %>
+    <%= render 'error_messages', model: @orders %>
+    
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
