--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,9 +31,8 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @order_customer, url: new_item_order_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
-    
-    <%# <%= render 'error_messages', model: f.object %> 
+    <%= form_with model: @order_customer, url: item_orders_path, id: 'charge-form', class: 'card-form', local: true do |f| %>
+      <%= render 'error_messages', model: f.object %>
     
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
@@ -106,14 +105,14 @@
           <label class="form-text">番地</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field :address, class:"input-default", id:"addresses", placeholder:"例）青山1-1-1"%>
+        <%= f.text_field :address, class:"input-default", id:"address", placeholder:"例）青山1-1-1"%>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">建物名</label>
           <span class="form-any">任意</span>
         </div>
-        <%= f.text_field :building_name, class:"input-default", id:"building", placeholder:"例）柳ビル103"%>
+        <%= f.text_field :building_name, class:"input-default", id:"building_name", placeholder:"例）柳ビル103"%>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
