--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -124,8 +124,9 @@
     </div>
     <%# /配送先の入力 %>
     <div class='buy-btn'>
-      <%= f.submit "購入" ,class:"buy-red-btn", id:"button" %>
-    </div>
+      <%= f.submit "購入" ,class:"buy-red-btn", id:"button" %> 
+      <%= link_to '購入', item_orders_path, method: :post, class: "buy-red-btn" %>
+</div>
     <% end %>
   </div>
 </div>
