--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -125,7 +125,7 @@
     <%# /配送先の入力 %>
     <div class='buy-btn'>
       <%= f.submit "購入" ,class:"buy-red-btn", id:"button" %> 
-      <%= link_to '購入', item_orders_path, method: :post, class: "buy-red-btn" %>
+      <%# <%= link_to '購入', item_orders_path, method: :post, class: "buy-red-btn" %> 
 </div>
     <% end %>
   </div>
