--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,14 +135,12 @@
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
-
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <% if item.orders.present? %>     
-          <%# <div class='sold-out'>
+          <% if item.order.present? %>     
+          <div class='sold-out'>
             <span>Sold Out!!</span>
-          </div>     %>
-          <%# <% end %> 
-          <%# //商品が売れていればsold outを表示しましょう %>
+          </div>     
+          <% end %> 
+
         <div class='item-info'>
           <h3 class='item-name'>
             <%= item.name %>
