--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,13 +8,13 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# <% if @item.orders.present? %> 
-      <%# <div class="sold-out">
+      
+      <% if @item.present? %> 
+      <div class="sold-out">
         <span>Sold Out!!</span>
-      </div> %>
-      <%# <% end %> 
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      </div> 
+      <% end %> 
+
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -25,7 +25,7 @@
       </span>
     </div>
 
-    <%# <% if @item.orders.blank? %> 
+    <% if @item.blank? %> 
       <% if user_signed_in? %>
     <% if current_user.id == @item.user_id %>
 
@@ -34,12 +34,10 @@
       <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
 
       <% else %>
-      <%# 商品が売れていない場合はこちらを表示しましょう %>
       <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn" %> 
-      <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
     <% end %> 
-
+    <% end %> 
 
     <div class="item-explain-box">
       <span><%= @item.description %></span>
