--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,7 +9,7 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
       
-      <% if @item.present? %> 
+      <% if @item.order.present? %> 
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div> 
