--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,7 +11,7 @@
       
       <% if @item.order.present? %> 
       <div class="sold-out">
-        <span>Sold Out!!</span>
+      <span>Sold Out!!</span>
       </div> 
       <% end %> 
 
@@ -32,12 +32,13 @@
       <%= link_to "商品の編集", edit_item_path(@item[:id]), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-
+      
       <% else %>
-      <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn" %> 
+      <%= link_to '購入画面に進む', item_order_path(@item.id) ,class:"item-red-btn" %> 
       <% end %>
     <% end %> 
     <% end %> 
+    
 
     <div class="item-explain-box">
       <span><%= @item.description %></span>
