--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,19 +25,20 @@
       </span>
     </div>
 
-    <% if @item.blank? %> 
+    <%# <% if @item.blank? %>  
       <% if user_signed_in? %>
     <% if current_user.id == @item.user_id %>
+    <% unless @item.order.present? %>
 
       <%= link_to "商品の編集", edit_item_path(@item[:id]), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-      
-      <% else %>
-      <%= link_to '購入画面に進む', item_order_path(@item.id) ,class:"item-red-btn" %> 
       <% end %>
-    <% end %> 
-    <% end %> 
+      <% else %>
+      <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn" %> 
+      <% end %>
+    <% end %>  
+    
     
 
     <div class="item-explain-box">
